feat(docs): Ultimas modificaciones

--- a/docs/sections/mainmatter/advice/advice_build.tex
+++ b/docs/sections/mainmatter/advice/advice_build.tex
@@ -135,3 +135,15 @@ bashiee@benjitooo $ ./a.out < sample.txt
         Buscar patrones.}
   \item{\textbf{Pensar en los últimos elementos}: ¿Cómo se llegó a este estado?}
 \end{itemize}
+
+\subsection{Header}
+
+\begin{cppcode}
+
+#include <bits/stdc++.h>
+
+#define optimize() std::ios_base::sync_with_stdio(false) ; std::cin.tie(NULL) ; std::cout.tie(NULL) ;
+
+#define ll long long
+
+\end{cppcode}
