--- a/docs/sections/mainmatter/graphs/graphs_build.tex
+++ b/docs/sections/mainmatter/graphs/graphs_build.tex
@@ -6,3 +6,4 @@ Los grafos son estructuras de datos que permiten conectar nodos y caminos.
 \input{sections/mainmatter/graphs/graph_DFS}
 \input{sections/mainmatter/graphs/graph_BFS}
 \input{sections/mainmatter/graphs/graph_MST}
+\input{sections/mainmatter/graphs/graph_combinaciones}
